sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:6: error: type mismatch;
 found   : Unit
 required: Int
       echange(i,imin)
                 ^